[gd_scene load_steps=11 format=3 uid="uid://cbrn2pa82d45k"]

[ext_resource type="Script" path="res://Scenes/ui/end_screen.gd" id="1_os4or"]
[ext_resource type="PackedScene" uid="uid://dt1sgt7ge327r" path="res://components/background_fade.tscn" id="2_oultt"]
[ext_resource type="PackedScene" uid="uid://bl4chlsthddi5" path="res://Scenes/ui/sound_button.tscn" id="3_5x170"]
[ext_resource type="PackedScene" uid="uid://cn2dpqwf6wr1d" path="res://effects/sound_effect.tscn" id="4_vgf7y"]
[ext_resource type="AudioStream" uid="uid://m3uitkuic6tt" path="res://assets/sounds/victory_jingle.ogg" id="5_7bcet"]
[ext_resource type="AudioStream" uid="uid://pry5cwcoqirc" path="res://assets/sounds/fail_jingle.ogg" id="6_dhqqc"]

[sub_resource type="Animation" id="Animation_vk6ru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mmium"]
resource_name = "in"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_n0m1y"]
resource_name = "out"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8vy7"]
_data = {
"RESET": SubResource("Animation_vk6ru"),
"in": SubResource("Animation_mmium"),
"out": SubResource("Animation_n0m1y")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_os4or")

[node name="BackgroundFade" parent="." instance=ExtResource("2_oultt")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "in"
libraries = {
"": SubResource("AnimationLibrary_y8vy7")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)
size_flags_vertical = 4

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(180, 150)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Description"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_5x170")]
layout_mode = 2
text = "Restart Game"

[node name="QuitButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_5x170")]
layout_mode = 2
text = "Quit Game"

[node name="Effects" type="Node" parent="."]

[node name="VictorySoundEffect" parent="Effects" instance=ExtResource("4_vgf7y")]
samples = Array[AudioStream]([ExtResource("5_7bcet")])

[node name="AudioStreamPlayer" parent="Effects/VictorySoundEffect" index="0"]
volume_db = -8.0

[node name="FailSoundEffect" parent="Effects" instance=ExtResource("4_vgf7y")]
samples = Array[AudioStream]([ExtResource("6_dhqqc")])

[node name="AudioStreamPlayer" parent="Effects/FailSoundEffect" index="0"]
volume_db = -8.0

[connection signal="fail" from="." to="Effects/FailSoundEffect" method="perform"]
[connection signal="victory" from="." to="Effects/VictorySoundEffect" method="perform"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]

[editable path="Effects/VictorySoundEffect"]
[editable path="Effects/FailSoundEffect"]
